# CASC

./: .gitignore  BUILD_NOTES.md  CMakeLists.txt  README.md
.cache/clangd/index/: ambisonic.h.1767AF7599F4651B.idx  audio-buffer.h.C417D6D0318CE217.idx  audio-ports-activation.h.AE16582FB3A11823.idx  audio-ports-config.h.CCE47928EB782589.idx  audio-ports.h.1BA9DC1DAD552CEE.idx  cJSON.c.110D5842E294182A.idx  cJSON.h.061CD8A8A34549F1.idx  casc_aot.c.AB5A959920CB6475.idx  casc_clap_bridge.c.BE89A70FE8047744.idx  casc_host_imports.c.6BF428500E82240D.idx  casc_instance.c.31460EF9622B9727.idx  casc_internal.h.0D28355F0A4379E5.idx  casc_loader.c.F1F5C9E51364C9D1.idx  casc_manifest.c.904041198961C3D4.idx  casc_pack.c.55B33F146D938D38.idx  casc_ui.c.A75CCCF306CAF1B4.idx  casc_ui_mac.m.50E809DF1A3DAAEE.idx  casc_validate.c.58C5AF5735300F96.idx  casc_wasm.c.E9DA6D0BB7998004.idx  clap.h.A0244F74F1D4F0E0.idx  color.h.C4098D6CEE700267.idx  configurable-audio-ports.h.2B3AB6527FB535EA.idx  context-menu.h.FDD66D9FF7904213.idx  entry.h.EE141138A5016561.idx  event-registry.h.46DF26E9D7844D32.idx  events.h.59AF4872B0E21B49.idx  fixedpoint.h.B00A0A0F79FE8193.idx  gui.h.1623F7EAA1D14441.idx  host.h.285DF96ABB672F59.idx  id.h.FB8946219FF6AD22.idx  latency.h.2936F2F4AA03BC57.idx  libcasc.h.83AEDF0E21EDF909.idx  log.h.4F87705462B5021F.idx  macros.h.ABFCD023B1A6F167.idx  miniz.c.C53DB9DF094C8F9A.idx  miniz.h.C24649222D04653B.idx  miniz_export.h.B19711DADEEFE02E.idx  note-name.h.8FADBA5CD14B3F89.idx  note-ports.h.A001303BB2CEFB53.idx  param-indication.h.8E13851777958F75.idx  (+32 more)
bridge/: CMakeLists.txt  casc_clap_bridge.c
docs/: format-spec-v0.1.md
examples/: CMakeLists.txt  README.md
examples/chorus/: chorus.c  dsp.wasm  manifest.json  ui.html
examples/chorus/presets/: default.json  lush.json
examples/delay/: delay.c  dsp.wasm  manifest.json  ui.html
examples/delay/presets/: default.json  dotted_eighth.json
examples/distortion/: distortion.c  dsp.wasm  manifest.json  ui.html
examples/distortion/presets/: crunch.json  default.json
examples/filter/: dsp.wasm  filter.c  manifest.json  ui.html
examples/filter/presets/: default.json  squelch.json
examples/gain/: dsp.wasm  gain.c  manifest.json
examples/gain/presets/: default.json  half_volume.json
examples/reverb/: dsp.wasm  manifest.json  reverb.c  ui.html
examples/reverb/presets/: default.json  large_hall.json
examples/synth/: dsp.wasm  manifest.json  synth.c  ui.html
examples/synth/presets/: default.json  pad.json  pluck.json
include/: libcasc.h
src/: CMakeLists.txt  casc_aot.c  casc_host_imports.c  casc_instance.c  casc_internal.h  casc_loader.c  casc_manifest.c  casc_ui.c  casc_ui_gtk.c  casc_ui_mac.m  casc_ui_null.c  casc_ui_win.cpp  casc_wasm.c
tests/: CMakeLists.txt  audio_sanity.c  test_clap_bridge.c  test_loader.c  test_manifest.c  test_roundtrip.c  test_synth_midi.c  test_synth_pitch.c  test_wasm.c
tools/: CMakeLists.txt  casc_pack.c  casc_validate.c
